--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ir a la siguiente pagina"
+        android:id="@+id/btn2"
+        android:layout_below="@id/btn1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        />
 
 
 
